compositor: only update output layers in response to Workspace::outputsChanged

Processing output changes before workspace gets a chance to create and update
logical outputs can cause problems, for example if
- you disable an output -> logical output gets removed
- some unrelated output changes happen
- you enable the output again, and different output layers get assigned than
  before

In that case, Compositor::assignOutputLayers would get called while there's no
logical output yet, and thus KWin crashes.

Outputs layers can only change in situations where workspace will later emit
outputsChanged, so the intermediary actions were unnecessary either way.

BUG: 514229