src/backends/drm/drm_virtual_output.cpp
@@ -75,7 +75,6 @@ DrmOutputLayer *DrmVirtualOutput::primaryLayer() const
 void DrmVirtualOutput::recreateSurface()
 {
     m_layer = m_backend->renderBackend()->createLayer(this);
-    Q_EMIT outputLayersChanged();
 }
 
 }
